--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music App</title>
     <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -14,20 +14,24 @@
 
     <div class="container">
         <h1>Music Player</h1>
-        <img src="ziauddeen.jpeg" alt="img">
+        <img src="ziauddeen.jpeg" alt="img" id="image">
         <div class="details">
-            <h3>title.mp3</h3>
-            <h2>Artist name</h2>
+            <h3 id="title">title.mp3</h3>
+            <h2 id="artist">Artist name</h2>
             <input type="range">
         </div>
         <div class="btns">
-             <button><i class="fa-sharp-duotone fa-solid fa-backward"></i></button>
-            
-            <button><i class="fa-sharp-duotone fa-solid fa-play"></i></button>
-            <button><i class="fa-sharp-duotone fa-solid fa-forward"></i></button>
+            <button id="prev_song"><i class="fa-sharp-duotone fa-solid fa-backward"></i></button>
+            <button id="current_song"><i class="fa-sharp-duotone fa-solid fa-play"></i></button>
+            <button id="next_song"><i class="fa-sharp-duotone fa-solid fa-forward"></i></button>
         </div>
 
     </div>
+
+
+    <script src="script.js">
+
+    </script>
 </body>
 
 </html>
